--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="false_button">False</string>
     <string name="correct_toast">Correct!</string>
     <string name="incorrect_toast">False!</string>
-    <string name="next_button">Next</string>
     <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
     <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
     <string name="question_africa">The source of the Nile River is in Egypt</string>
     <string name="question_americas">The Amazon River is the longest river in the Americas</string>
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
-    <string name="prev_button">previous</string>
+    <string name="description_previous">Previous</string>
+    <string name="description_next">Next</string>
 </resources>
