--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,9 @@
     <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>
     <string name="description_previous">Previous</string>
     <string name="description_next">Next</string>
+    <string name="warning_text">Are you sure you want to do this?</string>
+    <string name="show_answer_button">Show Answer</string>
+    <string name="cheat_button">Cheat!</string>
+    <string name="judgement_toast">Cheating is wrong!</string>
+    <string name="title_activity_cheat">Cheat</string>
 </resources>
