--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="cheat_button">Cheat!</string>
     <string name="judgement_toast">Cheating is wrong!</string>
     <string name="title_activity_cheat">Cheat</string>
+    <string name="build_version">API level</string>
 </resources>
